// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 91,
    "driverId": "d1",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1254.376,
    "tyre": "medium",
  },
  {
    "condition": 87,
    "driverId": "d3",
    "gap": 18.15,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1272.525,
    "tyre": "medium",
  },
  {
    "condition": 67,
    "driverId": "d4",
    "gap": 4.258,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1276.783,
    "tyre": "medium",
  },
  {
    "condition": 62,
    "driverId": "d6",
    "gap": 15.131,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1291.914,
    "tyre": "hard",
  },
  {
    "condition": 70,
    "driverId": "d5",
    "gap": 4.469,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 3,
    "position": 5,
    "retired": false,
    "retirementLap": null,
    "stints": 3,
    "totalTime": 1296.383,
    "tyre": "soft",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 0,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1252.933,
    "tyre": "medium",
  },
  {
    "condition": 72,
    "driverId": "d1",
    "gap": 2.62,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1255.553,
    "tyre": "medium",
  },
  {
    "condition": 12,
    "driverId": "d5",
    "gap": 20.106,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.658,
    "tyre": "soft",
  },
  {
    "condition": 62,
    "driverId": "d6",
    "gap": 15.955,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1291.613,
    "tyre": "hard",
  },
  {
    "condition": 34,
    "driverId": "d3",
    "gap": 0,
    "laps": 4,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 5,
    "stints": 0,
    "totalTime": 409.351,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
